@@ -256,6 +256,7 @@ allusers.message.none=There are no registered user accounts on this wiki.
 allusers.title=All Users
 block.button.block=Block user
 block.caption.duration=Length of block
+block.caption.lastLoginIpAddress=Last IP address used by this user
 block.caption.overview=Use the form below to block a specific IP address or login from editing or moving pages and from uploading files.  The blocked user will be alerted to the duration of the block, the login of the user who applied the block, and the reason for the block (for example, vandalizing specific pages).
 block.caption.reason=Reason for block
 block.caption.user=IP Address or username
